src/test/ui/rfc-2627-raw-dylib/unsupported-abi.stderr
error: ABI not supported by `#[link(kind = "raw-dylib")]` on this architecture
  --> $DIR/unsupported-abi.rs:8:5
   |
LL |     fn f(x: i32);
   |     ^^^^^^^^^^^^^

error: aborting due to previous error

